try with docker

--- a/playbooks/main.yml
+++ b/playbooks/main.yml
@@ -1,6 +1,12 @@
 ---
 # Main playbook for SonarQube installation
 
+- name: Install and configure Docker
+  hosts: sonarqube
+  become: true
+  roles:
+    - docker
+
 - name: Install and configure PostgreSQL for SonarQube
   hosts: sonarqube
   become: true
