--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,3 +2,31 @@
 inventory = hosts.ini
 remote_user = terminator
 private_key_file = ~/.ssh/id_ed25519
+host_key_checking = False
+retry_files_enabled = False
+roles_path = roles
+nocows = True
+stdout_callback = debug
+
+[privilege_escalation]
+become = True
+become_method = sudo
+
+[ssh_connection]
+pipelining = True
+control_path = /tmp/ansible-ssh-%%h-%%p-%%r
+
+[colors]
+highlight = white
+verbose = blue
+warn = bright purple
+error = red
+debug = dark gray
+deprecate = purple
+skip = cyan
+unreachable = red
+ok = green
+changed = yellow
+diff_add = green
+diff_remove = red
+diff_lines = cyan
