--- a/inventories/dev/group_vars/all.yml
+++ b/inventories/dev/group_vars/all.yml
@@ -1,28 +1,5 @@
 ---
-# Development environment variables
+# Development environment variables - only overrides from group_vars/all.yml
 
-# PostgreSQL settings
-postgresql_version: "15"
-postgresql_user: "sonarqube"
+# Development-specific password (overrides the environment variable lookup)
 postgresql_password: "devpassword"  # For development only
-postgresql_db: "sonarqube"
-postgresql_schema: "sonarqube"
-
-# SonarQube settings
-sonarqube_version: "9.9.0.65466"
-sonarqube_port: "9000"
-
-# Directories
-sonarqube_base_dir: "/opt/sonarqube"
-sonarqube_data_dir: "{{ sonarqube_base_dir }}/data"
-sonarqube_extensions_dir: "{{ sonarqube_base_dir }}/extensions"
-sonarqube_logs_dir: "{{ sonarqube_base_dir }}/logs"
-sonarqube_temp_dir: "{{ sonarqube_base_dir }}/temp"
-
-# Database connection
-sonarqube_db_user: "{{ postgresql_user }}"
-sonarqube_db_password: "{{ postgresql_password }}"
-sonarqube_db_name: "{{ postgresql_db }}"
-sonarqube_db_schema: "{{ postgresql_schema }}"
-sonarqube_db_host: "localhost"
-sonarqube_db_port: "5432"
