fix: move role-specific variables back to role defaults
- Moved Docker variables back to roles/docker/defaults/main.yml
- Moved PostgreSQL variables back to roles/postgresql/defaults/main.yml
- Moved SonarQube variables back to roles/sonarqube/defaults/main.yml
- Updated group_vars/all.yml to be a placeholder for common variables
- Updated README.md to reflect the changes in variable management

--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -1,3 +1,16 @@
 ---
-# Docker role default variables - role-specific settings only
-# Common variables are defined in group_vars/all.yml
+# Docker role default variables
+docker_prerequisites:
+  - apt-transport-https
+  - ca-certificates
+  - curl
+  - gnupg
+  - lsb-release
+
+docker_packages:
+  - docker-ce
+  - docker-ce-cli
+  - containerd.io
+  - docker-compose-plugin
+
+docker_gpg_key: https://download.docker.com/linux/ubuntu/gpg
