--- a/roles/sonarqube/defaults/main.yml
+++ b/roles/sonarqube/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # SonarQube role default variables
-sonarqube_version: "9.9.0.65466"
+sonarqube_version: "latest"
 sonarqube_port: "9000"
 
 # Directories
@@ -15,5 +15,5 @@ sonarqube_db_user: "{{ postgresql_user }}"
 sonarqube_db_password: "{{ postgresql_password }}"
 sonarqube_db_name: "{{ postgresql_db }}"
 sonarqube_db_schema: "{{ postgresql_schema }}"
-sonarqube_db_host: "localhost"
+sonarqube_db_host: "host.docker.internal"  # Special Docker hostname to access host machine
 sonarqube_db_port: "5432"
