--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -1,20 +1,7 @@
 ---
 # SonarQube role tasks
 
-# Directory setup
-- name: Create SonarQube directories
-  ansible.builtin.file:
-    path: "{{ item }}"
-    state: directory
-    mode: "0755"
-  loop:
-    - "{{ sonarqube_data_dir }}"
-    - "{{ sonarqube_extensions_dir }}"
-    - "{{ sonarqube_logs_dir }}"
-    - "{{ sonarqube_temp_dir }}"
-    - "{{ sonarqube_base_dir }}/docker"
-
-# Configuration
+# System requirements
 - name: Set sysctl parameters for SonarQube
   ansible.posix.sysctl:
     name: vm.max_map_count
@@ -22,39 +9,86 @@
     state: present
     reload: true
 
-- name: Copy Docker Compose file
+# Create dedicated user for SonarQube
+- name: Create sonarqube user
+  ansible.builtin.user:
+    name: sonarqube
+    system: true
+    shell: /bin/false
+    home: "{{ sonarqube_base_dir }}"
+    create_home: false
+
+# Directory setup
+- name: Create SonarQube directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    mode: "0755"
+    owner: sonarqube
+    group: sonarqube
+  loop:
+    - "{{ sonarqube_base_dir }}"
+    - "{{ sonarqube_data_dir }}"
+    - "{{ sonarqube_extensions_dir }}"
+    - "{{ sonarqube_logs_dir }}"
+    - "{{ sonarqube_temp_dir }}"
+
+# Install prerequisites
+- name: Install Java and required dependencies
+  ansible.builtin.apt:
+    name:
+      - openjdk-17-jdk
+      - unzip
+      - curl
+    state: present
+    update_cache: true
+
+# Download and extract SonarQube
+- name: Download SonarQube ZIP
+  ansible.builtin.get_url:
+    url: "https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-{{ sonarqube_version }}.zip"
+    dest: "/tmp/sonarqube-{{ sonarqube_version }}.zip"
+    mode: "0644"
+  when: sonarqube_version != "latest"
+
+- name: Download latest SonarQube ZIP
+  ansible.builtin.get_url:
+    url: "https://binaries.sonarsource.com/Distribution/sonarqube/sonarqube-{{ sonarqube_latest_version }}.zip"
+    dest: "/tmp/sonarqube-{{ sonarqube_latest_version }}.zip"
+    mode: "0644"
+  when: sonarqube_version == "latest"
+
+- name: Extract SonarQube ZIP
+  ansible.builtin.unarchive:
+    src: "/tmp/sonarqube-{{ sonarqube_version if sonarqube_version != 'latest' else sonarqube_latest_version }}.zip"
+    dest: "{{ sonarqube_base_dir }}"
+    remote_src: true
+    owner: sonarqube
+    group: sonarqube
+  register: sonarqube_extracted
+
+# Configuration
+- name: Configure SonarQube properties
   ansible.builtin.template:
-    src: docker-compose.yml.j2
-    dest: "{{ sonarqube_base_dir }}/docker/docker-compose.yml"
+    src: sonar.properties.j2
+    dest: "{{ sonarqube_install_dir }}/conf/sonar.properties"
+    mode: "0644"
+    owner: sonarqube
+    group: sonarqube
+
+- name: Configure SonarQube service
+  ansible.builtin.template:
+    src: sonarqube.service.j2
+    dest: /etc/systemd/system/sonarqube.service
     mode: "0644"
 
 # Deployment
-- name: Pull SonarQube image
-  ansible.builtin.command:
-    cmd: docker pull sonarqube:{{ sonarqube_version }}
-  changed_when: true
-
-- name: Check if Docker Compose file exists
-  ansible.builtin.stat:
-    path: "{{ sonarqube_base_dir }}/docker/docker-compose.yml"
-  register: compose_file
-
-- name: Check if SonarQube is running
-  ansible.builtin.command:
-    cmd: docker compose ps -q sonarqube
-    chdir: "{{ sonarqube_base_dir }}/docker"
-  register: sonarqube_status
-  changed_when: false
-  failed_when: false
-  when: compose_file.stat.exists
-
-- name: Start SonarQube with Docker Compose
-  ansible.builtin.command:
-    cmd: docker compose up -d
-    chdir: "{{ sonarqube_base_dir }}/docker"
-  register: compose_output
-  changed_when: compose_output.rc == 0
-  when: not compose_file.stat.exists or sonarqube_status.stdout == ""
+- name: Enable and start SonarQube service
+  ansible.builtin.systemd:
+    name: sonarqube
+    enabled: true
+    state: started
+    daemon_reload: true
 
 - name: Wait for SonarQube to be ready
   ansible.builtin.uri:
