--- a/roles/sonarqube/defaults/main.yml
+++ b/roles/sonarqube/defaults/main.yml
@@ -1,7 +1,6 @@
 ---
 # SonarQube role default variables
-sonarqube_version: "10.3.0.82913"  # Specific version to download
-sonarqube_latest_version: "10.3.0.82913"  # Used when sonarqube_version is set to "latest"
+sonarqube_version: "10.3.0.82913"  # Latest stable version
 sonarqube_port: "9000"
 
 # Directories
@@ -10,7 +9,7 @@ sonarqube_data_dir: "{{ sonarqube_base_dir }}/data"
 sonarqube_extensions_dir: "{{ sonarqube_base_dir }}/extensions"
 sonarqube_logs_dir: "{{ sonarqube_base_dir }}/logs"
 sonarqube_temp_dir: "{{ sonarqube_base_dir }}/temp"
-sonarqube_install_dir: "{{ sonarqube_base_dir }}/sonarqube-{{ sonarqube_version if sonarqube_version != 'latest' else sonarqube_latest_version }}"
+sonarqube_install_dir: "{{ sonarqube_base_dir }}/sonarqube-{{ sonarqube_version }}"
 
 # Database connection
 sonarqube_db_user: "{{ postgresql_user }}"
