--- a/roles/postgresql/defaults/main.yml
+++ b/roles/postgresql/defaults/main.yml
@@ -2,8 +2,8 @@
 # PostgreSQL role default variables
 postgresql_version: "15"
 postgresql_user: "sonarqube"
-postgresql_password: "{{ lookup('ansible.builtin.env', 'SONARQUBE_DB_PASSWORD') }}"
 postgresql_db: "sonarqube"
 postgresql_schema: "sonarqube"
 postgresql_encoding: "UTF-8"
 postgresql_template: "template0"
+sonarqube_db_password: "{{ postgresql_password }}"
