--- a/roles/sonarqube/defaults/main.yml
+++ b/roles/sonarqube/defaults/main.yml
@@ -24,3 +24,6 @@ sonarqube_java_opts: "-Xmx2048m -Xms2048m"
 
 # Local file path
 sonarqube_local_zip_path: "~/Downloads"
+
+# Firewall configuration
+sonarqube_configure_firewall: true  # Set to false to skip firewall configuration
