--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -92,6 +92,12 @@
     state: started
     daemon_reload: true
 
+# Firewall configuration
+- name: Add nftables rule for SonarQube port
+  ansible.builtin.command: >
+    nft add rule inet filter input tcp dport {{ sonarqube_port }} accept comment \"Allow SonarQube web interface\"
+  when: sonarqube_configure_firewall | default(true)
+
 - name: Wait for SonarQube to be ready
   ansible.builtin.uri:
     url: "http://localhost:{{ sonarqube_port }}"
