--- a/roles/sonarqube/tasks/main.yml
+++ b/roles/sonarqube/tasks/main.yml
@@ -95,7 +95,7 @@
 # Firewall configuration
 - name: Add nftables rule for SonarQube port
   ansible.builtin.command: >
-    nft add rule inet filter input tcp dport {{ sonarqube_port }} accept comment \"Allow SonarQube web interface\"
+    nft add rule inet filter INPUT tcp dport {{ sonarqube_port }} accept comment \"Allow SonarQube web interface\"
   when: sonarqube_configure_firewall | default(true)
 
 - name: Wait for SonarQube to be ready
