--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -24,9 +24,11 @@ jobs:
           uv venv
 
       - name: Install dependencies
-        run: uv pip install .
+        run: |
+          source .venv/bin/activate
+          uv pip install -r requirements.txt
 
       - name: Run ansible-lint
         run: |
-          uv pip install ansible-lint>=25.1.3
+          source .venv/bin/activate
           ansible-lint
