fix: host name file

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = hosts.ini
+inventory = inventory.yaml
+version = 1.0.0
 remote_user = terminator
 private_key_file = ~/.ssh/id_ed25519
 host_key_checking = False
