fix: remove old code

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory = inventory.yaml
+inventory = inventory.yml
 version = 1.0.0
 remote_user = terminator
 private_key_file = ~/.ssh/id_ed25519
