--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
 # Docker role tasks
 
+- name: Debug - Show current user
+  ansible.builtin.debug:
+    msg: "Current user: {{ ansible_user_id }} / Effective user: {{ ansible_effective_user_id }}"
+
 - name: Install required system packages
   ansible.builtin.apt:
     name:
@@ -11,6 +15,8 @@
       - lsb-release
     state: present
     update_cache: true
+  become: true
+  become_user: root
 
 - name: Add Docker GPG apt Key
   apt_key:
